--- a/task_run_java.yml
+++ b/task_run_java.yml
@@ -3,7 +3,9 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {respository: openjdk:8-jdk-alpine}
+  source: 
+    respository: openjdk
+    tag: 8-jdk-alpine3.9
   
 inputs:
   - name: resource-advalgassignment3
