--- a/task_run_java.yml
+++ b/task_run_java.yml
@@ -3,9 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: 
-    respository: openjdk
-    tag: 8-jdk-alpine3.9
+  source: {repository: busybox}
   
 inputs:
   - name: resource-advalgassignment3
