--- a/task_run_java.yml
+++ b/task_run_java.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
+  source: {repository: openjdk, tag: 19-jdk-alpine}
   
 inputs:
   - name: resource-advalgassignment3
